// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
<div>
  <div
    class="sc-brPLxw jqqklj"
    data-rttabs="true"
  >
    <div
      class="sc-iMWBiJ iZEClt"
    >
      <ul
        class="sc-fvtFIe cHMgmW"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          class="sc-bBeLUv hoMOVm react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-0"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="sc-bBeLUv hoMOVm"
          data-rttab="true"
          id="react-tabs-2"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-0"
      class="sc-ihgnxF bbehlM react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="sc-cWSHoV bKtA-De"
      >
        <h2
          class="sc-kAyceB dvmaTz"
        >
          CDI
        </h2>
      </div>
      <div
        class="sc-jMakVo gHeVja"
      >
        <h3
          class="sc-kAyceB dvmaTz"
        >
          titre 1
        </h3>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="sc-ihgnxF bbehlM"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
<div>
  <div
    class="sc-brPLxw jqqklj"
    data-rttabs="true"
  >
    <div
      class="sc-iMWBiJ iZEClt"
    >
      <ul
        class="sc-fvtFIe cHMgmW"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-5"
          aria-disabled="false"
          aria-selected="true"
          class="sc-bBeLUv hoMOVm react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-4"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-7"
          aria-disabled="false"
          aria-selected="false"
          class="sc-bBeLUv hoMOVm"
          data-rttab="true"
          id="react-tabs-6"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-4"
      class="sc-ihgnxF bbehlM react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="sc-cWSHoV bKtA-De"
      >
        <h3
          class="sc-kAyceB dvmaTz"
        >
          CDI
        </h3>
      </div>
      <div
        class="sc-jMakVo gHeVja"
      >
        <h4
          class="sc-kAyceB dvmaTz"
        >
          titre 1
        </h4>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="sc-ihgnxF bbehlM"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
<div>
  <div
    class="sc-brPLxw jqqklj"
    data-rttabs="true"
  >
    <div
      class="sc-iMWBiJ iZEClt"
    >
      <ul
        class="sc-fvtFIe cHMgmW"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="true"
          class="sc-bBeLUv hoMOVm react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-8"
          role="tab"
          tabindex="0"
        >
          CDI
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          class="sc-bBeLUv hoMOVm"
          data-rttab="true"
          id="react-tabs-10"
          role="tab"
        >
          CDD
        </li>
      </ul>
    </div>
    <div
      aria-labelledby="react-tabs-8"
      class="sc-ihgnxF bbehlM react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="sc-cWSHoV bKtA-De"
      >
        <h4
          class="sc-kAyceB dvmaTz"
        >
          CDI
        </h4>
      </div>
      <div
        class="sc-jMakVo gHeVja"
      >
        <h5
          class="sc-kAyceB dvmaTz"
        >
          titre 1
        </h5>
        <p>
          paragraphe 1
        </p>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="sc-ihgnxF bbehlM"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
